--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.engcia</groupId>
-  <artifactId>Haemorrhage-How</artifactId>
+  <groupId>pt.ipp.isep.dei</groupId>
+  <artifactId>tbj-status</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
 
-  <name>Haemorrhage-How</name>
+  <name>tbj-status</name>
   <url>http://drools.org</url>
 
   <properties>
