--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
       <version>${slf4j-version}</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
